# python-todo

./: .gitignore  README.md  main.py  pyproject.toml
src/python_todo/: __init__.py  cli.py
tests/: test_main.py
